Added CMD's, Vault API

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,6 @@ commands:
     permission: teamfight.setspawn
     permission-message: "You not permission"
     usage: /setspawnteam {team}
+  teamfight:
+
+
