--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,13 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     compileOnly 'com.destroystokyo.paper:paper-api:1.12.2-R0.1-SNAPSHOT'
+    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
+    implementation 'org.projectlombok:lombok:1.18.28'
 }
 
 def targetJavaVersion = 8
